Fix overflow property of menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ body {
   position: fixed;
   height: 100vh;
   width: 300px;
-  overflow: none;
+  overflow: hidden;
   border-right: 4px solid black;
 }
 
